# pinocchio_examples

./: .gitignore  CMakeLists.txt
compulate_collision_distance/: compulate_collision_distance.cpp
frame_kinematics_hessian/: frame_kinematics_hessian.cpp
inverse_dynamics_external_force_test/: CMakeLists.txt  inverse_dynamics_external_force.cpp
inverse_dynamics_external_force_test/robot/: mini_cheetah_mesh_v2.urdf
inverse_dynamics_with_external_force/: inverse_dynamics_with_external_force.cpp
manifold_cppad/: manifold_cppad.cpp
print_frame_information/: print_frame_information.cpp
print_joint_information/: print_joint_information.cpp
robot/mini_cheetah/sdf/: mini_cheetah.srdf
robot/mini_cheetah/urdf/: mini_cheetah.urdf  mini_cheetah_ground.urdf
semi_impl_euler/: semi_impl_euler.cpp
velocity_derivatives/: velocity_derivatives.cpp
